--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Linkify - Links and colors!{% endblock %}
+{% block title %}
+    {% if is_granted('ROLE_USER') %}
+        Linkify {{ user.name }} - Links and colors!
+    {% else %}
+        Linkify - Links and colors!
+    {% endif %}
+
+{% endblock %}
 
 {% block header %}
     {{ include('fragments/_landing_header.html.twig') }}
@@ -11,7 +18,13 @@
     <div class="relative mx-auto flex w-full justify-center font-sans flex-grow">
 
         <div class="w-full px-12 py-10 md:px-64 md:py-40">
-            <div class="text-4xl md:text-6xl font-bold prose">Welcome to Linkify</div>
+
+            {% if is_granted('ROLE_USER') %}
+                <div class="text-4xl md:text-6xl font-bold prose">Welcome back to Linkify {{ user.name }}</div>
+            {% else %}
+                <div class="text-4xl md:text-6xl font-bold prose">Welcome to Linkify</div>
+            {% endif %}
+
             <div class="text-base md:text-2xl prose">Now with ability to add and show your favourite colors</div>
         </div>
 
