--- a/templates/link/_form.html.twig
+++ b/templates/link/_form.html.twig
@@ -30,6 +30,23 @@
 
         <div data-color-picker-target="picker" class="py-4"></div>
     </div>
+
+    <div class="w-full color-picker" {{ stimulus_controller('color-picker') }}>
+
+        <span class="flex flex-row gap-2">
+            {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block mb-2' }}) }}
+
+            {{ include('fragments/_color_gradient_icons.html.twig') }}
+        </span>
+
+        {{ form_widget(form.backgroundColor, {
+            attr: {
+                'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                'data-color-picker-target': 'colorInput'
+            }}) }}
+
+        <div data-color-picker-target="picker" class="py-4"></div>
+    </div>
 </div>
 
 <div class="flex items-center w-full">
