--- a/templates/color/_form.html.twig
+++ b/templates/color/_form.html.twig
@@ -13,7 +13,7 @@
 
             {{ form_widget(form.value, {
                 attr: {
-                    'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-2',
                     'data-color-picker-target': 'colorInput'
                 }}) }}
 
@@ -40,7 +40,7 @@
 
             {{ form_widget(form.textColor, {
                 attr: {
-                    'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-2',
                     'data-color-picker-target': 'colorInput'
                 }}) }}
 
@@ -66,7 +66,7 @@
 
             {{ form_widget(form.nameColor, {
                 attr: {
-                    'class': 'hidden leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10',
+                    'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-2',
                     'data-color-picker-target': 'colorInput'
                 }}) }}
 
