--- a/templates/color/index.html.twig
+++ b/templates/color/index.html.twig
@@ -33,9 +33,10 @@
                 <tbody>
                 {% for color in colors %}
                     <tr class="text-slate-500 hover:bg-gray-100 border-b border-slate-300 {{ loop.index is divisible by 2 ? '' : 'bg-slate-100' }}">
-                        <td class="p-3 text-center font-bold text-xl">{{ color.name }}</td>
+                        <td class="p-3 text-center font-bold text-xl"
+                            style="background: {{ color.nameColor }}">{{ color.name }}</td>
                         <td class="p-3" style="background: {{ color.value }}">{{ color.value }}</td>
-                        <td class="p-3">{{ color.text }}</td>
+                        <td class="p-3" style="background: {{ color.textColor }}">{{ color.text }}</td>
                         <td class="p-3">{{ color.colorVisits|length }}</td>
                         <td class="p-3">{{ color.latestVisit ? color.latestVisit.createdAt|ago : 'Not yet visited' }}</td>
                         <td class="p-3">
