--- a/templates/color/index.html.twig
+++ b/templates/color/index.html.twig
@@ -35,7 +35,7 @@
                     <tr class="text-slate-500 hover:bg-gray-100 border-b border-slate-300 {{ loop.index is divisible by 2 ? '' : 'bg-slate-100' }}">
                         <td class="p-3 text-center font-bold text-xl"
                             style="background: {{ color.nameColor }}">{{ color.name }}</td>
-                        <td class="p-3" style="background: {{ color.value }}">{{ color.value }}</td>
+                        <td class="p-3" style="background: {{ color.value }}; max-width: 12rem">{{ color.value }}</td>
                         <td class="p-3" style="background: {{ color.textColor }}">{{ color.text }}</td>
                         <td class="p-3">{{ color.colorVisits|length }}</td>
                         <td class="p-3">{{ color.latestVisit ? color.latestVisit.createdAt|ago : 'Not yet visited' }}</td>
